--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "qcommandpalette"]
 	path = qcommandpalette
-	url = https://bitbucket.org/theHamsta/qcommandpalette.git
+	url = git@github.com:theHamsta/QCommandPalette.git
 [submodule "imagecomparer/TinyTIFF"]
 	path = imagecomparer/TinyTIFF
 	url = https://github.com/jkriege2/TinyTIFF.git
