- add 'sourc-type: git' to snapcraft.yaml

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -20,6 +20,8 @@ parts:
 
     imagecomparer:
         plugin: cmake
+        source: .
+        source-type: git
 
         build-packages:
             - libpng-dev
