- change URL of QCommandPalette to https-URL

--- a/.gitmodules
+++ b/.gitmodules
@@ -9,4 +9,4 @@
 	url = https://github.com/jkriege2/TinyTIFF.git
 [submodule "QCommandPalette"]
 	path = QCommandPalette
-	url = git@github.com:theHamsta/QCommandPalette.git
+	url = https://github.com/theHamsta/QCommandPalette.git
