--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -13,6 +13,7 @@ apps:
             - opengl
             - hardware-observe
             - x11
+            - wayland
             - home
             - network
 
