Add themes plug for icons

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -17,6 +17,16 @@ apps:
             - home
             - network
 
+plugs:
+    gtk-3-themes:
+        interface: content
+        target: $SNAP/usr/share/themes
+        default-provider: gtk-common-themes
+    icon-themes:
+        interface: content
+        target: $SNAP/usr/share/icons
+        default-provider: gtk-common-themes
+
 parts:
 
     imagecomparer:
