--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -60,6 +60,9 @@ parts:
             - libgles2-mesa-dev
             - libqt5printsupport5
             - libpython-dev
+        stage-packages:
+            # Here for the plugins-- they're not linked in automatically.
+            - libqt5gui5
 
         after: 
             - desktop-qt5
