--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -63,6 +63,7 @@ parts:
         stage-packages:
             # Here for the plugins-- they're not linked in automatically.
             - libqt5gui5
+            - qt5-gtk-platformtheme
 
         after: 
             - desktop-qt5
