Add code that I found on https://github.com/ali1234/mysnaps/blob/25dfbb9c0f97c50fc6fd4a653b57031163f77959/qmlrss/snapcraft.yaml

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -78,4 +78,13 @@ parts:
         after: 
             - desktop-qt5
             - qt5conf
+            - qt5
+     qt5:
+         source: git://github.com/ubuntu/snapcraft-desktop-helpers
+         source-subdir: qt
+         make-parameters: ["FLAVOR=qt5"]
+         plugin: make
+         build-packages:
+             - qtbase5-dev
+             - dpkg-dev
 
