--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -77,7 +77,7 @@ parts:
             - desktop-qt5
             - qt5conf
             - qt5
-            - python_packages
+            - pythonpackages
 
 
     qt5:
@@ -89,7 +89,7 @@ parts:
              - qtbase5-dev
              - dpkg-dev
 
-    python_packages:
+    pythonpackages:
         plugin: python
         python-version: python3
         python-packages: [scikit-image,numpy]
