--- a/imagecomparer/CMakeLists.txt
+++ b/imagecomparer/CMakeLists.txt
@@ -26,6 +26,7 @@ include_directories(
     ${CMAKE_CURRENT_SOURCE_DIR}/include/
 	${CMAKE_CURRENT_BINARY_DIR}
 	${PYTHON_INCLUDE_DIR}	
+	${SNAP}/usr/include/python2.7	
     ${Qt5Widgets_INCLUDE_DIRS}
     ${Qt5Core_INCLUDE_DIRS}
     ${Qt5Gui_INCLUDE_DIRS}
