--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -72,8 +72,8 @@ parts:
             - libglfw3-dev
             - libgles2-mesa-dev
             - libqt5printsupport5
-            - libpython-dev
-            - python-dev
+            - libpython3-dev
+            - python3-dev
             - libqt5svg5
             - qtbase5-dev
             - dpkg-dev
@@ -106,6 +106,6 @@ parts:
 
     pythonpackages:
         plugin: python
-        python-version: python2
+        python-version: python3
         python-packages: [matplotlib,numpy, pydicom]
 
