Try again with python2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,7 @@ if( NOT DOXYGEN_FOUND)
 	set (WITH_DOCUMENTATION OFF )
 endif()
 
-find_package( PythonInterp REQUIRED )
+find_package( PythonInterp 2.7 REQUIRED )
 
 add_subdirectory(opencvmatviewer)
 add_subdirectory(imagecomparer)
