--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -68,6 +68,7 @@ parts:
             - libqt5printsupport5
             - libpython-dev
             - python-dev
+            - python-tk
             - libqt5svg5
             - qtbase5-dev
             - dpkg-dev
@@ -82,6 +83,8 @@ parts:
             - libgdk-pixbuf2.0-0
             - libqt5svg5 # for loading icon themes which are svg
             - appmenu-qt5
+            - python-tk
+            - python-skimage
         after: 
             - desktop-qt5
             - qt5conf
