--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -41,7 +41,7 @@ parts:
 
     imagecomparer:
         plugin: cmake
-        source: 
+        source: . 
         config-flags: 
             - -DPYTHON_EXECUTABLE=$SNAP/usr/bin/python3.5m
             - -DPYTHON_LIBRARY=$SNAP/usr/lib/x86_64-linux-gnu/libpython3.5m.so.1
