--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -43,9 +43,9 @@ parts:
         plugin: cmake
         source: . 
         configflags: 
-            - -DPYTHON_EXECUTABLE=$SNAP/usr/bin/python3.5m
-            - -DPYTHON_LIBRARY=$SNAP/usr/lib/x86_64-linux-gnu/libpython3.5m.so.1
-            - -DPYTHON_INCLUDE_DIRS=$SNAP/include/python3.5m
+            - -DPYTHON_EXECUTABLE=/usr/bin/python3.5m
+            - -DPYTHON_LIBRARY=/usr/lib/x86_64-linux-gnu/libpython3.5m.so.1
+            - -DPYTHON_INCLUDE_DIRS=/include/python3.5m
             - -DPYBIND11_PYTHON_VERSION=1.4
             - -DPYTHON_MODULE_EXTENSION=3.5m
             - -DPYTHONLIBS_FOUND=1
