--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -77,6 +77,7 @@ parts:
             - python3-dev
             - python3-tk
             - python3-skimage
+            - python3-matplotlib
             - libqt5svg5
             - qtbase5-dev
             - dpkg-dev
