--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -89,9 +89,14 @@ parts:
             - light-themes
             - shared-mime-info
             - libqt5gui5
-            - libgdk-pixbuf2.0-0
+            - libgd-pixbuf2.0-0
             - libqt5svg5 # for loading icon themes which are svg
             - appmenu-qt5
+            - python3-tk
+            - python3-skimage
+            - python3-matplotlib
+        prime:
+            - /usr/lib/python3/dist-packages/*
         after: 
             - desktop-qt5
             - qt5conf
