--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -75,9 +75,6 @@ parts:
             - libqt5printsupport5
             - libpython3-dev
             - python3-dev
-            - python3-tk
-            - python3-skimage
-            - python3-matplotlib
             - libqt5svg5
             - qtbase5-dev
             - dpkg-dev
@@ -95,8 +92,9 @@ parts:
             - python3-tk
             - python3-skimage
             - python3-matplotlib
+            - python3-numpy
         prime:
-            - /usr/lib/python3/dist-packages/*
+            - usr/lib/python3/dist-packages/*
         after: 
             - desktop-qt5
             - qt5conf
