--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -96,7 +96,8 @@ parts:
             - usr/lib/python3/dist-packages/*
             - bin/*
             - lib/*
-            - /usr/lib/*
+            - usr/lib/*
+            - usr/bin/*
         after: 
             - desktop-qt5
             - qt5conf
