Add install script from https://forum.snapcraft.io/t/update-alternatives-not-placed-in-snap/4352

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -104,6 +104,14 @@ parts:
             - qt5conf
             - qt5
             # - pythonpackages
+        install: |
+            set -ex
+            for dir in $SNAPCRAFT_PART_INSTALL/usr/lib/*/; do
+                (cd $dir;
+                if [ -f blas/libblas.so.3.* ]; then
+                ln -s blas/libblas.so.3.* libblas.so.3
+                fi)
+            done
 
 
     qt5:
