--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -78,6 +78,7 @@ parts:
             - libqt5svg5
             - qtbase5-dev
             - dpkg-dev
+            - libblas3
         stage-packages:
             # Here for the plugins-- they're not linked in automatically.
             - libxkbcommon0
