--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -109,8 +109,8 @@ parts:
             set -ex
             for dir in $SNAPCRAFT_PART_INSTALL/usr/lib/*/; do
                 (cd $dir;
-                if [ -f blas/libblas.so.3.* ]; then
-                ln -s blas/libblas.so.3.* libblas.so.3
+                if [ -f libblas/libblas.so.3.* ]; then
+                ln -s libblas/libblas.so.3.* libblas.so.3
                 fi)
             done
 
