--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,6 +1,6 @@
 name: imagecomparer # you probably want to 'snapcraft register <name>'
 version: '0.1' # just for humans, typically '1.2+git' or '1.3.2'
-summary: Image viewer for comparing two images or two image series. 
+summary: Image viewer for comparing two images or two image series.
 description: Image viewer for comparing two images or two image series. |
 
 grade: stable # must be 'stable' to release into candidate/stable channels
@@ -41,8 +41,8 @@ parts:
 
     imagecomparer:
         plugin: cmake
-        source: . 
-        # configflags: 
+        source: .
+        # configflags:
         #     - -DPYTHON_EXECUTABLE=/usr/bin/python3.5m
         #     - -DPYTHON_LIBRARY=/usr/lib/x86_64-linux-gnu/libpython3.5m.so.1
         #     - -DPYTHON_INCLUDE_DIRS=/include/python3.5m
@@ -101,9 +101,11 @@ parts:
             - usr/lib/python3/dist-packages/*
             - bin/*
             - lib/*
+            - etc/*
+            - share/plugins/*.py
             - usr/lib/*
             - usr/bin/*
-        after: 
+        after:
             - desktop-qt5
             - qt5conf
             - qt5
