--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,7 @@ add_subdirectory(opencvmatviewer)
 add_subdirectory(imagecomparer)
 add_subdirectory(QCommandPalette)
 add_subdirectory(pybind11)
+add_subdirectory(python_binding)
 
 install( FILES ${CMAKE_CURRENT_SOURCE_DIR}/README.md DESTINATION doc )
 
