--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "pybind11"]
 	path = pybind11
 	url = https://github.com/pybind/pybind11.git
+[submodule "opencvmatviewer"]
+	path = opencvmatviewer
+	url = https://github.com/theHamsta/OpenCV-MatViewer.git
